# spdlog

./: .gitignore
example/: CMakeLists.txt  example.cpp  shmlog.cpp  testfmt.cpp  testshm.cpp
include/: fastlog.h
include/spdlog/: formatter.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  shm_buffer.h
include/spdlog/details/: fmt_helper.h  log_msg.h
include/spdlog/fmt/bundled/: core.h
include/spdlog/sinks/: shm_buffer copy.h  shm_buffer.h  shm_sink.h  sink.h  stdout_sinks.h
tests/: CMakeLists.txt  includes.h  test_pattern_formatter.cpp  test_shm.cpp
